--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {
 <iframe title="Pedestrians Injured in Vehicle Collisions 2020" aria-label="Map" id="datawrapper-chart-gh757" src="https://datawrapper.dwcdn.net/gh757/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="700"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
 
- <p>   The maps above highlights the sum of injuries from each Zip Code in New York City in 2019 and 2020, as reported by NYC Open Data. The highest amount from both years came from the same Brooklyn area code, 11212, with 158 injuries in 2019 and 101 in 2020.   
+ <p>   The maps above highlight the sum of injuries from each Zip Code in New York City in 2019 and 2020, as reported by NYC Open Data. The highest amount from both years came from the same Brooklyn area code, 11212, with 158 injuries in 2019 and 101 in 2020.   
 
 
 </p> 
