--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 
  <p> An analysis of vehicle collisions on New York City roads in 2019 and 2020 found that pedestrians were more likely to be injured in traffic crashes in Brooklyn than any other borough.  
 
-   <p> In 2019, there were a total of 10,568 pedestrian injuries across all five boroughs. Brooklyn made up for 2,700 pedestrian injuries, the highest in the city. Overall vehicle collision rates for the city dropped significantly in 2020. However in a second consecutive year, Brooklyn had the most pedestrian injuries with 1,780. 
+   <p> In 2019, there were a total of 10,568 pedestrian injuries reported in each of the five boroughs. Brooklyn was reported to have 2,700 pedestrian injuries, the highest in the city. Overall vehicle collision rates for the city dropped significantly in 2020. However in a second consecutive year, Brooklyn had the most reported pedestrian injuries with 1,780. 
 </p> 
 
   <iframe title="Pedestrians Injured in Vehicle Collisions 2019" aria-label="Map" id="datawrapper-chart-otfYz" src="https://datawrapper.dwcdn.net/otfYz/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="700"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
